fix diagram's alignment

--- a/browser/components/markdown.styl
+++ b/browser/components/markdown.styl
@@ -376,6 +376,7 @@ pre.fence
     justify-content center
     background-color white
     max-width 100%
+    flex-grow 1
 
     canvas, svg
       max-width 100% !important
